<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_base"
    tools:context="com.flybyadmin.View.UI.OnBoarding_Step_1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize"
        android:orientation="vertical">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#010102">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/ACTIVITY_TITEL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/manropeextrabold"
                    android:text="Onboard New Store"
                    android:textColor="@color/white"
                    android:textSize="18dp" />


            </LinearLayout>

<ImageView
    android:id="@+id/ic_logout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="@dimen/dimen_20dp"
    android:layout_centerVertical="true"
    android:src="@drawable/ic_logout"/>



            <Button
                android:id="@+id/add_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="25dp"
                android:background="@drawable/green_btn_ripple"
                android:fontFamily="@font/blackhansansregular"
                android:gravity="start|center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="  Cancel  "
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="16dp" />


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/light_green"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="27dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropebold"
                    android:text="STEP 1 : Store Details 1"
                    android:textColor="@color/light_green"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropebold"
                    android:text="@string/store_name_business_name"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white_off"
                    android:textSize="16sp" />
                <EditText
                    android:id="@+id/storeNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="14dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropebold"
                    android:text="@string/owner_first_name"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ownerFirstTV"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropebold"
                    android:text="@string/owner_last_name"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ownerlastTV"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropebold"
                    android:text="@string/mobile_number"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/mobileNumberTV"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropebold"
                    android:text="@string/whatsapp_number"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/whatsappTV"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/manropebold"
                    android:text="@string/email"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white_off"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/emailTV"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_bg"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:layout_marginBottom="200dp"
                    android:textColor="@color/white_off"
                    android:textSize="14dp" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/nextLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@drawable/green_btn_ripple_botton"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:drawablePadding="5dp"
            android:fontFamily="@font/blackhansansregular"
            android:gravity="center"
            android:text="NEXT"
            android:textAllCaps="true"
            android:textColor="@color/background_base"
            android:textSize="16dp" />
    </RelativeLayout>
</RelativeLayout>